--- a/apps/albums/package.json
+++ b/apps/albums/package.json
@@ -15,5 +15,8 @@
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^5.1.0",
     "webpack-merge": "^6.0.1"
+  },
+  "dependencies": {
+    "lodash": "^4.17.21"
   }
 }
