--- a/.github/workflows/deploy-albums.yaml
+++ b/.github/workflows/deploy-albums.yaml
@@ -20,4 +20,4 @@ jobs:
       - name: Build Albums Project Artifacts
         run: vercel build --prod --token=${{ secrets.MFE_ACCESS_TOKEN }}
       - name: Deploy Albums Project Artifacts to Vercel
-        run: vercel deploy --prod --token=${{ secrets.MFE_ACCESS_TOKEN }}
+        run: vercel deploy --prebuilt --prod --token=${{ secrets.MFE_ACCESS_TOKEN }}
