--- a/.github/workflows/deploy-container.yaml
+++ b/.github/workflows/deploy-container.yaml
@@ -23,4 +23,4 @@ jobs:
           MFE_ALBUMS_DOMAIN: ${{ secrets.MFE_ALBUMS_DOMAIN }}
         run: vercel build --prod --token=${{ secrets.MFE_ACCESS_TOKEN }}
       - name: Deploy Container Project Artifacts to Vercel
-        run: vercel deploy --prod --token=${{ secrets.MFE_ACCESS_TOKEN }}
+        run: vercel deploy --prebuilt --prod --token=${{ secrets.MFE_ACCESS_TOKEN }}
