--- a/.github/workflows/deploy-posts.yaml
+++ b/.github/workflows/deploy-posts.yaml
@@ -20,4 +20,4 @@ jobs:
       - name: Build Posts Project Artifacts
         run: vercel build --prod --token=${{ secrets.MFE_ACCESS_TOKEN }}
       - name: Deploy Posts Project Artifacts to Vercel
-        run: vercel deploy --prod --token=${{ secrets.MFE_ACCESS_TOKEN }}
+        run: vercel deploy --prebuilt --prod --token=${{ secrets.MFE_ACCESS_TOKEN }}
