--- a/.github/workflows/deploy-albums.yaml
+++ b/.github/workflows/deploy-albums.yaml
@@ -3,6 +3,7 @@ env:
   VERCEL_ORG_ID: ${{ secrets.MFE_ORG_ID }}
   VERCEL_PROJECT_ID: ${{ secrets.MFE_POSTS_PROJ_ID }}
 on:
+  workflow_dispatch:
   push:
     branches:
       - main
