--- a/.github/workflows/deploy-container.yaml
+++ b/.github/workflows/deploy-container.yaml
@@ -12,6 +12,11 @@ on:
 jobs:
   Deploy-Production:
     runs-on: ubuntu-latest
+
+    defaults:
+      run:
+        working-directory: ./apps/container
+
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
