--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "mfe demo",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "deploy:local": "chmod +x ./local-deploy.sh && ./local-deploy.sh",
+    "deploy:stop:all": "pm2 stop all",
+    "deploy:delete:all": "pm2 delete all",
+    "deploy:restart:all": "pm2 restart all"
   },
   "keywords": [
     "mfe"
