--- a/.github/workflows/deploy-posts.yaml
+++ b/.github/workflows/deploy-posts.yaml
@@ -8,7 +8,7 @@ on:
     branches:
       - main
     paths:
-      - 'apps/posts/**'
+      - 'apps/posts/src/**'
 jobs:
   Deploy-Production:
     runs-on: ubuntu-latest
