--- a/apps/container/package.json
+++ b/apps/container/package.json
@@ -16,9 +16,11 @@
     "@babel/preset-react": "^7.24.7",
     "autoprefixer": "^10.4.20",
     "babel-loader": "^9.2.1",
+    "css-loader": "^7.1.2",
     "html-webpack-plugin": "^5.6.0",
     "postcss": "^8.4.47",
     "postcss-loader": "^8.1.1",
+    "style-loader": "^4.0.0",
     "tailwindcss": "^3.4.12",
     "webpack": "^5.94.0",
     "webpack-cli": "^5.1.4",
@@ -26,6 +28,10 @@
     "webpack-merge": "^6.0.1"
   },
   "dependencies": {
+    "@radix-ui/react-checkbox": "^1.1.1",
+    "@radix-ui/react-dialog": "^1.1.1",
+    "@radix-ui/react-dropdown-menu": "^2.1.1",
+    "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
