--- a/apps/posts/package.json
+++ b/apps/posts/package.json
@@ -28,6 +28,8 @@
     "webpack-merge": "^6.0.1"
   },
   "dependencies": {
+    "@radix-ui/react-scroll-area": "^1.1.0",
+    "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
