--- a/apps/albums/package.json
+++ b/apps/albums/package.json
@@ -11,7 +11,9 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@vue/compiler-sfc": "^3.5.7",
     "autoprefixer": "^10.4.20",
+    "babel-loader": "^9.2.1",
     "css-loader": "^7.1.2",
     "html-webpack-plugin": "^5.6.0",
     "postcss": "^8.4.47",
@@ -19,13 +21,13 @@
     "tailwindcss": "^3.4.12",
     "vue-loader": "^17.4.2",
     "vue-style-loader": "^4.1.3",
-    "vue-template-compiler": "^2.7.16",
     "webpack": "^5.94.0",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^5.1.0",
     "webpack-merge": "^6.0.1"
   },
   "dependencies": {
+    "@faker-js/faker": "^9.0.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "lodash": "^4.17.21",
@@ -33,6 +35,8 @@
     "radix-vue": "^1.9.6",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
-    "vue": "^3.5.6"
+    "vue": "^3.5.6",
+    "vue-progressive-image": "^4.0.0-beta.10",
+    "vue-router": "^4.4.5"
   }
 }
