--- a/apps/posts/package.json
+++ b/apps/posts/package.json
@@ -28,6 +28,10 @@
     "webpack-merge": "^6.0.1"
   },
   "dependencies": {
+    "@chakra-ui/image": "^2.1.0",
+    "@faker-js/faker": "^9.0.1",
+    "@radix-ui/react-avatar": "^1.1.0",
+    "@radix-ui/react-collapsible": "^1.1.0",
     "@radix-ui/react-scroll-area": "^1.1.0",
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
