--- a/apps/albums/package.json
+++ b/apps/albums/package.json
@@ -30,6 +30,7 @@
     "@faker-js/faker": "^9.0.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "history": "^5.3.0",
     "lodash": "^4.17.21",
     "lucide-vue-next": "^0.441.0",
     "radix-vue": "^1.9.6",
