--- a/apps/container/package.json
+++ b/apps/container/package.json
@@ -35,6 +35,7 @@
     "@radix-ui/react-slot": "^1.1.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "history": "^5.3.0",
     "lodash": "^4.17.21",
     "lucide-react": "^0.441.0",
     "react": "^18.3.1",
