--- a/apps/albums/package.json
+++ b/apps/albums/package.json
@@ -33,6 +33,7 @@
     "history": "^5.3.0",
     "lodash": "^4.17.21",
     "lucide-vue-next": "^0.441.0",
+    "pinia": "^2.2.2",
     "radix-vue": "^1.9.6",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
